# kube-opex-analytics

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  RELEASES.md  SECURITY.md  backend.py  entrypoint.sh  index.html  index.md  index.yaml  k8s-loadviz.py  kubeledger-26.01.0-beta7.tgz  kubeledger-26.01.0.tgz  kubeledger-26.01.1.tgz  pyproject.toml  requirements.txt  run-debug-docker.sh  run-debug.sh  test_backend.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-dockerimage-on-pr.yml  build-dockerimage-on-tag.yml  build-ghcr-image-on-pr.yml  build-ghcr-image-on-tag.yml  build.yml  codeql-analysis.yml  dockerimage.yml  helm-release-kubeledger.yml  helm-release.yml  pythonpackage.yml
css/: frontend.css
css/britecharts/charts/: sparkline.min.css
docs/: built-in-dashboards-and-charts.md  configuration-settings.md  design-fundamentals.md  installation-on-docker.md  installation-on-kubernetes-and-openshift.md  installation-on-kubernetes.md  multi-cluster-analytics.md  prometheus-exporter-grafana-dashboard.md
helm/kube-opex-analytics/: Chart.yaml  values.yaml
helm/kube-opex-analytics/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/kube-opex-analytics/templates/tests/: test-connection.yaml
js/: frontend.js  k8s-loadviz.js  kube-loadviz.js
js/britecharts/umd/: bar.min.js  bar.min.js.map  brush.min.js.map  bullet.min.js  bullet.min.js.map  colors.min.js  colors.min.js.map  donut.min.js  groupedBar.min.js  heatmap.min.js.map  legend.min.js  legend.min.js.map  loading.min.js.map  miniTooltip.min.js  scatterPlot.min.js  sparkline.min.js  stackedArea.min.js  stackedBar.min.js  stackedBar.min.js.map  step.min.js  step.min.js.map  tooltip.min.js
js/d3-selection/: package.json
kustomize/resources/: kube-opex-analytics-config.yaml  kube-opex-analytics-service.yaml  kube-opex-analytics-tests.yaml
manifests/helm/: Chart.yaml  values.yaml
manifests/helm/kube-opex-analytics/: .helmignore  Chart.yaml
manifests/helm/kube-opex-analytics/templates/: deployment.yaml  ingress.yaml
manifests/helm/templates/: deployment.yaml  ingress.yaml  serviceaccount.yaml  servicemonitor.yaml
manifests/kube-opex-analytics/helm/: Chart.yaml  values.yaml
manifests/kube-opex-analytics/helm/templates/: _helpers.tpl  deployment.yaml
manifests/kube-opex-analytics/helm/templates/tests/: test-connection.yaml
manifests/kube-opex-analytics/kustomize/: kustomization.yaml
manifests/kube-opex-analytics/kustomize/resources/: kube-opex-analytics-namespace.yaml  kube-opex-analytics-service.yaml  kube-opex-analytics-sts.yaml  kube-opex-analytics-tests.yaml
manifests/kubeledger/helm/: Chart.yaml  values.yaml
manifests/kubeledger/helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
manifests/kubeledger/helm/templates/tests/: test-connection.yaml
manifests/kubeledger/kustomize/: kustomization.yaml
manifests/kubeledger/kustomize/resources/: kubeledger-config.yaml  kubeledger-namespace.yaml  kubeledger-rbac.yaml  kubeledger-secrets.yaml  kubeledger-service.yaml  kubeledger-sts.yaml  kubeledger-tests.yaml
manifests/kustomize/: kustomization.yaml
manifests/kustomize/resources/: kube-opex-analytics-config.yaml  kube-opex-analytics-rbac.yaml  kube-opex-analytics-secret.yaml  kube-opex-analytics-secrets.yaml  kube-opex-analytics-sts.yaml
marketing/: README.md  capture-screenshots.js  create_marketing_video.py  package.json
static/data/: backend.json  cpu_rf_trends.json  cpu_usage_period_1209600.json  cpu_usage_period_31968000.json  cpu_usage_trends.json  memory_rf_trends.json  memory_usage_period_1209600.json  memory_usage_period_31968000.json  memory_usage_trends.json
templates/: index.html
tests/dcgm/: dcgm-exporter-metrics-my-app.json  dcgm-exporter-metrics-sample.json  dcgm-exporter-metrics-stress.json  dcgm-exporter-svc.yaml
tests/k8s/: consumer-mem.yaml  redis-master-deployment.yaml  redis-slave-deployment.yaml
tests/prometheus/: prometheus.yml
third-parties/grafana/: kube-opex-analytics.json
